# Physical-AI-Humanoid-Robotics-Book

./: .gitignore  .npmignore  docusaurus.config.ts  jest.config.js  package-lock.json  package.json  sidebars.ts  tsconfig.json
.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
.github/workflows/: book-quality.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
auth/: Dockerfile  package-lock.json  package.json
auth/src/: index.ts
code-examples/01-introduction-physical-ai/hello_physical_ai/: README.md  package.xml  setup.py
code-examples/01-introduction-physical-ai/hello_physical_ai/hello_physical_ai/: publisher_member_function.py  subscriber_member_function.py
code-examples/01-introduction-physical-ai/hello_physical_ai/launch/: talker_listener.launch.py
code-examples/03-ros2-python-development/my_robot_controller/: README.md  package.xml  setup.py
code-examples/03-ros2-python-development/my_robot_controller/action/: Countdown.action
code-examples/03-ros2-python-development/my_robot_controller/msg/: RobotCommand.msg
code-examples/03-ros2-python-development/my_robot_controller/my_robot_controller/: add_two_ints_client.py  add_two_ints_server.py  command_publisher.py  countdown_action_client.py  countdown_action_server.py  sensor_subscriber.py
code-examples/03-ros2-python-development/my_robot_controller/srv/: AddTwoInts.srv
code-examples/04-urdf-robot-modeling/my_robot_description/: CMakeLists.txt  README.md  package.xml
code-examples/04-urdf-robot-modeling/my_robot_description/urdf/: two_link_arm.urdf
code-examples/04-urdf-robot-modeling/my_robot_description/xacro/: mobile_base.xacro  mobile_robot.xacro
code-examples/05-gazebo-fundamentals/my_gazebo_worlds/: CMakeLists.txt  README.md  package.xml
code-examples/05-gazebo-fundamentals/my_gazebo_worlds/launch/: spawn_mobile_robot.launch.py
code-examples/05-gazebo-fundamentals/my_gazebo_worlds/worlds/: empty_arm_world.world
code-examples/07-unity-integration/: README.md
code-examples/08-nvidia-isaac-sim/: README.md
code-examples/09-isaac-ros-perception/: README.md
code-examples/10-nav2-path-planning/my_nav2_bringup/: CMakeLists.txt  README.md  package.xml
code-examples/10-nav2-path-planning/my_nav2_bringup/config/: nav2_params.yaml
code-examples/10-nav2-path-planning/my_nav2_bringup/launch/: nav2_bringup.launch.py
code-examples/13-capstone-autonomous-humanoid/: README.md
docker/: Dockerfile.ros2_humble  ros_entrypoint.sh
docs/: glossary.md  instructor-guide.md  intro.md  video_embedding_instructions.md
docs/01-robotic-nervous-system/: 01-introduction-physical-ai.md  02-ros2-architecture.md  03-ros2-python-development.md  04-urdf-robot-modeling.md  index.md
docs/02-digital-twin/: 05-gazebo-fundamentals.md  06-physics-simulation.md  07-unity-integration.md  index.md
docs/03-ai-robot-brain/: 08-nvidia-isaac-sim.md  09-isaac-ros-perception.md  10-nav2-path-planning.md  index.md
docs/04-vision-language-action/: 11-voice-to-action.md  12-llm-cognitive-planning.md  13-capstone-autonomous-humanoid.md  index.md
docs/appendices/: cloud-setup.md  hardware-guide.md  resources.md  troubleshooting.md
docs/student-resources/: ros2_python_cheat_sheet.md  vla_reference_card.md
specs/001-physical-ai-book/: plan.md  (+6 more)
(+102 files in other folders)
